fixed typo gtk-pixbuf -> gdk-pixbuf
 SVN 7423@trunk

--- a/docs/INSTALL
+++ b/docs/INSTALL
@@ -69,7 +69,7 @@ properly:
   and follow the install instructions.
 
   In the Terminal, run
-  sudo fink install gtk-pixbuf gtk+ gtk+-data \
+  sudo fink install gdk-pixbuf gtk+ gtk+-data \
     gtk+-shlibs gtk-doc 1.2-13 gtkglarea gtk-engines
 
 
