--- a/languages/lazaruside.fi.po
+++ b/languages/lazaruside.fi.po
@@ -472,7 +472,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisambiguousfilesfound
 msgid "Ambiguous files found"
-msgstr ""
+msgstr "Epäselviä (tai moniselitteisiä) tiedostoja löytyi"
 
 #: lazarusidestrconsts:lispkgmangambiguousunitsfound
 msgid "Ambiguous units found"
@@ -1716,7 +1716,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisdeleteoldfile
 msgid "Delete old file %s%s%s?"
-msgstr ""
+msgstr "Poistetaanko %s%s%s-niminen vanha fiedosto?"
 
 #: lazarusidestrconsts:lispkgmangdeleteoldpackagefile2
 msgid "Delete old package file %s%s%s?"
@@ -3430,6 +3430,10 @@ msgstr "Hyppää takaisin"
 msgid "Jump forward"
 msgstr "Hyppää eteenpäin"
 
+#: lazarusidestrconsts:lismenujumpto
+msgid "Jump to"
+msgstr ""
+
 #: lazarusidestrconsts:lismenujumptonexterror
 msgid "Jump to next error"
 msgstr ""
@@ -4726,6 +4730,10 @@ msgstr "puola (CP1250)"
 msgid "Polish(ISO 8859-2)"
 msgstr "puola (ISO 8859-2)"
 
+#: lazarusidestrconsts:rslanguageportugues
+msgid "Portuguese"
+msgstr ""
+
 #: lazarusidestrconsts:dlgwrdpreview
 msgid "Preview"
 msgstr "Esikatselu"
@@ -5240,7 +5248,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lispkgedrightclickontheitemstreetogetthepopupmenuwithallav
 msgid "Right click on the items tree to get the popupmenu with all available package functions."
-msgstr ""
+msgstr "Näpäyttämällä hiiren oikeaa näppäintä saat esiin ponnahdusvalikon jossa on kaikki saatavissa olevat komponenttipakettiin liittyvät toiminnallisuudet"
 
 #: lazarusidestrconsts:dlgrightmargin
 msgid "Right margin"
@@ -5752,6 +5760,10 @@ msgstr "Näytä vihjeet"
 
 #: lazarusidestrconsts:dlghintsunused
 msgid "Show Hints for unused units in main source"
+msgstr ""
+
+#: lazarusidestrconsts:uemshowlinenumbers
+msgid "Show Line Numbers"
 msgstr ""
 
 #: lazarusidestrconsts:dlgshownotes
@@ -6672,7 +6684,7 @@ msgstr ""
 
 #: lazarusidestrconsts:listhereareotherfilesinthedirectorywiththesamename
 msgid "There are other files in the directory with the same name,%swhich only differ in case:%s%s%sDelete them?"
-msgstr ""
+msgstr "Kansiossa on muitakin saman nimisiä tiedostoja,%sne eroavat ainoastaan kirjaimien koon perusteella:%s%s%sPoistetaanko ne?"
 
 #: lazarusidestrconsts:lispkgmangtherearetwounitswiththesamename1from2from
 msgid "There are two units with the same name:%s%s1. %s%s%s from %s%s2. %s%s%s from %s%s%s"
@@ -7104,7 +7116,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisunabletoshowmethodplzfixtheerrorshowninthemessage
 msgid "Unable to show method. Plz fix the error shown in the message window."
-msgstr ""
+msgstr "Ei pystytä näyttämään metodia. Ole hyvä ja korjaa virhe joka näkyy kääntäjän viestit ikkunassa"
 
 #: lazarusidestrconsts:lisunabletostreamt
 msgid "Unable to stream %s:T%s."
@@ -7242,7 +7254,7 @@ msgstr ""
 msgid "Unit File Name:"
 msgstr ""
 
-#: lazarusidestrconsts:uemunitinfo
+#: lazarusidestrconsts:uemshowunitinfo
 msgid "Unit Info"
 msgstr "Käännösyksikön tiedot"
 
@@ -7454,7 +7466,7 @@ msgstr "Apupisteiden välinen etäisyys pystysuunnassa"
 msgid "View Anchor Editor"
 msgstr ""
 
-#: lazarusidestrconsts:uemviewcallstackcursor
+#: lazarusidestrconsts:uemviewcallstack
 msgid "View Call Stack"
 msgstr ""
 
