fixed translations for multi lines, fixed converting UTF8 to local charset under linux fpc 2.0
 SVN 7560@trunk

--- a/components/codetools/languages/codetools.fr.po
+++ b/components/codetools/languages/codetools.fr.po
@@ -7,6 +7,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.0.2\n"
 "Project-Id-Version: codetools\n"
+"mot-clé \n"
+"%s\" non prévu"
 
 #: codetoolsstrconsts:ctsothercompilerdefines
 msgid "%s Compiler Defines"
@@ -710,7 +712,7 @@ msgstr "fin inattendue du source"
 
 #: codetoolsstrconsts:ctsunexpectedkeyword
 msgid "unexpected keyword \"%s\""
-msgstr "mot-clé \n%s\" non prévu"
+msgstr ""
 
 #: codetoolsstrconsts:ctsunexpectedkeywordwhilereadingbackwards
 msgid "unexpected keyword \"%s\" found while reading blocks backwards"
