--- a/languages/objinspstrconsts.de.po
+++ b/languages/objinspstrconsts.de.po
@@ -8,13 +8,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Hilfedatenbank %s%s%s konnte keinen Betrachter für die Hilfeseite des Typs %"
-"s finden"
-"Schlüsselwort %s%s%s konnte nicht in Hilfedatenbank %s%s%s gefunden werden."
-"No HTML Browser found.%sPlease define one in Help -> Configure Help -> "
-"Viewers"
-"Das Makro %s in 'Hilfe -> Hilfe einstellen -> Betrachter -> BrowserParams' wird "
-"durch die URL ersetzt."
+"Hilfedatenbank %s%s%s konnte keinen Betrachter für die Hilfeseite des Typs %s findenSchlüsselwort %s%s%s konnte nicht in Hilfedatenbank %s%s%s gefunden werden.No HTML Browser found.%sPlease define one in Help -> Configure Help -> ViewersDas Makro %s in 'Hilfe -> Hilfe einstellen -> Betrachter -> BrowserParams' wird durch die URL ersetzt."
 
 #: objinspstrconsts:sccsilcmbimglist
 msgid " Images "
