--- a/components/synedit/languages/synedit.itiso.po
+++ b/components/synedit/languages/synedit.itiso.po
@@ -7,7 +7,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Il tasto \"%s\" è già assegnato ad un altro comando dell'editor.\015\nLa scorciatoia per questa voce non è stata cambiata"
+"Il tasto \"%s\" è già assegnato ad un altro comando dell'editor.\015\n"
+"La scorciatoia per questa voce non è stata cambiata"
 
 #: syneditstrconst:syns_scrollinfofmt
 msgid "%d - %d"
